dataset1235/2025-2/610742602/users/2774042468/executions/2563853024_1559799913.log
== SUBMISSION (2025-09-02 20:29:05)
-- CODE: 
numero =input(numero)
quadrado = numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:17:59)
-- CODE: 
numero = input(-2)
quadrado = numero **
print(quadrado()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:30:47)
-- CODE: 
numero =input(numero)
quadrado =numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:28:24)
-- CODE: 
numero = int(input(numero))
quadrado = numero **2
print(quadrado())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:28:51)
-- CODE: 
numero = int(input(numero))
quadrado = numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:31:06)
-- CODE: 
numero =int(input(numero))
quadrado =numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:31:05)
-- CODE: 
numero =int(input(numero))
quadrado =numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:34:02)
-- CODE: 
numero =int(input("numero"))
quadrado =numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
numero4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
numero0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
numero1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
numero100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
numero225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
numero14400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:17:53)
-- CODE: 
numero = input(-2)
quadrado = numero **2
print(quadrado()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:31:07)
-- CODE: 
numero =int(input(numero))
quadrado =numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:14:33)
-- CODE: 
numero = input(2*1)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:33:41)
-- CODE: 
numero =int(input(numero))
quadrado =numero 2**2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:34:02)
-- CODE: 
numero =int(input("numero"))
quadrado =numero **2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
numero4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
numero0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
numero1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
numero100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
numero225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
numero14400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:20:37)
-- CODE: 
numero = int(input(-15))
quadrado = numero **2
print(quadrado",())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:17:02)
-- CODE: 
numero = input(2)
quadrado = numero **2
print(quadrado()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:31:06)
-- CODE: 
numero =int(input(numero))
quadrado =numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:17:58)
-- CODE: 
numero = input(-2)
quadrado = numero **
print(quadrado()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:15:37)
-- CODE: 
numero = input(2*2)
quadrado = numero **4
print(quadrado(2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:21:23)
-- CODE: 
numero = int(input(-15))
quadrado = numero **2
print(quadrado",(-15))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:17:54)
-- CODE: 
numero = input(-2)
quadrado = numero **2
print(quadrado()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:28:24)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
None
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
None
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
None
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
None
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
None
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:14:33)
-- CODE: 
numero = input(2*1)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:30:48)
-- CODE: 
numero =input(numero)
quadrado =numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:20:36)
-- CODE: 
numero = int(input(-15))
quadrado = numero **2
print(quadrado",())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 3
    print(quadrado",())
                  ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:21:24)
-- CODE: 
numero = int(input(-15))
quadrado = numero **2
print(quadrado",(-15))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 3
    print(quadrado",(-15))
                  ^
SyntaxError: unterminated string literal (detected at line 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:15:36)
-- CODE: 
numero = input(2*2)
quadrado = numero **4
print(quadrado(2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:18:02)
-- CODE: 
numero = input(-2)
quadrado = numero **
print(quadrado(2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:33:40)
-- CODE: 
numero =int(input(numero))
quadrado =numero 2**2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =numero 2**2
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:31:13)
-- CODE: 
numero =int(input(numero))
quadrado =numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:17:01)
-- CODE: 
numero = input(2)
quadrado = numero **2
print(quadrado()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 3
    print(quadrado()
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:15:39)
-- CODE: 
numero = input(2*2)
quadrado = numero **4
print(quadrado(2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero **4
               ~~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:29:04)
-- CODE: 
numero =input(numero)
quadrado = numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =input(numero)
                  ^^^^^^
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:31:12)
-- CODE: 
numero =int(input(numero))
quadrado =numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero =int(input(numero))
                      ^^^^^^
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:28:51)
-- CODE: 
numero = int(input(numero))
quadrado = numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input(numero))
                       ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:18:03)
-- CODE: 
numero = input(-2)
quadrado = numero **
print(quadrado(2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado = numero **
                        ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
